[gd_scene load_steps=4 format=2]

[ext_resource path="res://tiles.gd" type="Script" id=1]
[ext_resource path="res://World.gd" type="Script" id=16]
[ext_resource path="res://camera.gd" type="Script" id=18]

[node name="World" type="Spatial"]
script = ExtResource( 16 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 27.0902, -36.3437 )
shadow_enabled = true
omni_range = 62.033

[node name="Tiles" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="CameraPivot" type="Position3D" parent="."]

[node name="CameraGimbal" type="Position3D" parent="CameraPivot"]

[node name="Camera" type="Camera" parent="CameraPivot/CameraGimbal"]
current = true
size = 10.0
script = ExtResource( 18 )

[connection signal="board_created" from="Tiles" to="." method="create_world"]
